{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 64,
  "lineage": "eae850e0-23fb-92ce-dac4-6f001e61cc36",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:network-acl/acl-055751d9ec6bc2aab",
            "default_network_acl_id": "acl-055751d9ec6bc2aab",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-055751d9ec6bc2aab",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "275252031212",
            "subnet_ids": [
              "subnet-0392120383a9bb767",
              "subnet-06e033271f14eb409",
              "subnet-085c31b5cff140bdf",
              "subnet-0a653089f47851440"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Team": "infra"
            },
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:route-table/rtb-0c36d310adf606d2e",
            "default_route_table_id": "rtb-0c36d310adf606d2e",
            "id": "rtb-0c36d310adf606d2e",
            "owner_id": "275252031212",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Team": "infra"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:security-group/sg-0af1a2195f70db41f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0af1a2195f70db41f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "275252031212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Team": "infra"
            },
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:internet-gateway/igw-0e258c7bfd4f53520",
            "id": "igw-0e258c7bfd4f53520",
            "owner_id": "275252031212",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Team": "infra"
            },
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e258c7bfd4f53520",
            "id": "r-rtb-0770699dbd39fe86d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0770699dbd39fe86d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:route-table/rtb-0347ba1321b2f3c34",
            "id": "rtb-0347ba1321b2f3c34",
            "owner_id": "275252031212",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-db-eu-west-2a",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-db-eu-west-2a",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:route-table/rtb-07d53274977b50068",
            "id": "rtb-07d53274977b50068",
            "owner_id": "275252031212",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-db-eu-west-2b",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-db-eu-west-2b",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:route-table/rtb-0770699dbd39fe86d",
            "id": "rtb-0770699dbd39fe86d",
            "owner_id": "275252031212",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0309e3cf0af8975cc",
            "route_table_id": "rtb-0347ba1321b2f3c34",
            "subnet_id": "subnet-085c31b5cff140bdf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9943cd78aea807f",
            "route_table_id": "rtb-07d53274977b50068",
            "subnet_id": "subnet-06e033271f14eb409"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4f528bfed3f1f33",
            "route_table_id": "rtb-0770699dbd39fe86d",
            "subnet_id": "subnet-0a653089f47851440"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb04bdd2725af7ba",
            "route_table_id": "rtb-0770699dbd39fe86d",
            "subnet_id": "subnet-0392120383a9bb767"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:subnet/subnet-085c31b5cff140bdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085c31b5cff140bdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275252031212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-db-eu-west-2a",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-db-eu-west-2a",
              "Team": "infra"
            },
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:subnet/subnet-06e033271f14eb409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e033271f14eb409",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275252031212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-db-eu-west-2b",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-db-eu-west-2b",
              "Team": "infra"
            },
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:subnet/subnet-0a653089f47851440",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a653089f47851440",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275252031212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-eu-west-2a",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-eu-west-2a",
              "Team": "infra"
            },
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:subnet/subnet-0392120383a9bb767",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0392120383a9bb767",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275252031212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-eu-west-2b",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-eu-west-2b",
              "Team": "infra"
            },
            "vpc_id": "vpc-0d3bc866cf5681e80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:275252031212:vpc/vpc-0d3bc866cf5681e80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055751d9ec6bc2aab",
            "default_route_table_id": "rtb-0c36d310adf606d2e",
            "default_security_group_id": "sg-0af1a2195f70db41f",
            "dhcp_options_id": "dopt-365e355e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d3bc866cf5681e80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c36d310adf606d2e",
            "owner_id": "275252031212",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Team": "infra"
            }
          }
        }
      ]
    }
  ]
}